// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hidden if dismissed 1`] = `
<section
  className="AnalyticsNudge"
>
  <p>
    Okay, opting you out of telemetry. If you change your mind, you can run
     
    <pre>
      tilt analytics opt in
    </pre>
     in your terminal.
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Dismiss
    </button>
  </span>
</section>
`;

exports[`hides nudge if !needsNudge and no request made 1`] = `
<section
  className="AnalyticsNudge"
>
  <p>
    Welcome to Tilt! We collect anonymized usage data to help us improve. Is that OK? (
    <a
      href="https://docs.tilt.dev/telemetry_faq.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read more
    </a>
    )
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Nope
    </button>
    <button
      className="AnalyticsNudge-button opt-in"
      onClick={[Function]}
    >
      I'm in
    </button>
  </span>
</section>
`;

exports[`hides nudge if dismissed, even if needsNudge = true 1`] = `
<section
  className="AnalyticsNudge"
>
  <p>
    Welcome to Tilt! We collect anonymized usage data to help us improve. Is that OK? (
    <a
      href="https://docs.tilt.dev/telemetry_faq.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read more
    </a>
    )
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Nope
    </button>
    <button
      className="AnalyticsNudge-button opt-in"
      onClick={[Function]}
    >
      I'm in
    </button>
  </span>
</section>
`;

exports[`shows failure message with response body 1`] = `
<section
  className="AnalyticsNudge is-visible"
>
  <p>
    Oh no, something went wrong! Request failed with: 
    <pre>
      something is not right! something is quite wrong!
    </pre>
     (
    <a
      href="https://tilt.dev/contact"
      rel="noopener noreferrer"
      target="_blank"
    >
      contact us
    </a>
    )
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Dismiss
    </button>
  </span>
</section>
`;

exports[`shows nudge if needsNudge 1`] = `
<section
  className="AnalyticsNudge is-visible"
>
  <p>
    Welcome to Tilt! We collect anonymized usage data to help us improve. Is that OK? (
    <a
      href="https://docs.tilt.dev/telemetry_faq.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Read more
    </a>
    )
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Nope
    </button>
    <button
      className="AnalyticsNudge-button opt-in"
      onClick={[Function]}
    >
      I'm in
    </button>
  </span>
</section>
`;

exports[`shows request-in-progress message 1`] = `
<section
  className="AnalyticsNudge is-visible"
>
  <p>
    Okay, making it so...
  </p>
</section>
`;

exports[`shows success message: opt in 1`] = `
<section
  className="AnalyticsNudge is-visible"
>
  <p>
    Thanks for helping us improve Tilt for you and everyone! (You can change your mind by running 
    <pre>
      tilt analytics opt out
    </pre>
     in your terminal.)
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Dismiss
    </button>
  </span>
</section>
`;

exports[`shows success message: opt out 1`] = `
<section
  className="AnalyticsNudge is-visible"
>
  <p>
    Okay, opting you out of telemetry. If you change your mind, you can run
     
    <pre>
      tilt analytics opt in
    </pre>
     in your terminal.
  </p>
  <span>
    <button
      className="AnalyticsNudge-button"
      onClick={[Function]}
    >
      Dismiss
    </button>
  </span>
</section>
`;
